# 3switch1fan

./: CMakeCache.txt  CMakeLists.txt  FIRMWARE_REQUIREMENTS_MCP.md  partitions.csv  sdkconfig
.cache/clangd/index/: config.h.BC0CE27174DAC364.idx  main.c.2E3B5425F03D752F.idx  network.c.02257BAE763EF3B0.idx  network.h.2ED619A84440173B.idx  state_common.h.59018E8AC8B9A33A.idx  state_firmware_update.c.B3CAFF2C9DC2A6E9.idx  state_firmware_update.h.5164CB7DF42EEE48.idx  state_machine.c.E86ABBD9B3B7D3A4.idx  state_machine.h.E6295E95409851FF.idx  state_operational.c.7C0684912EECA530.idx  state_poweron.c.F2E8F522EB63A494.idx  tiny-json.c.96F967FDD3359122.idx  tiny-json.h.64A401DC4E40A0AB.idx  uart_comm.c.7629A8840517F0AC.idx  uart_comm.h.B932359A4836EF9E.idx
main/: CMakeLists.txt  config.h  main.c  network.c  network.h  state_common.h  state_firmware_update.c  state_firmware_update.h  state_machine.c  state_machine.h  state_operational.c  state_operational.h  state_poweron.c  state_poweron.h  uart_comm.c  uart_comm.h
